# codevf-sdk-python

./: LICENSE  README.md  pyproject.toml
examples/: create_task_example.py  get_credits_balance_example.py  get_tags_example.py  get_task_status_example.py  structured_output.py
scripts/: check_endpoints.py  integration_smoke.py
src/codevf/: __init__.py  client.py  exceptions.py
src/codevf/models/: __init__.py  attachment.py  credit.py  project.py  tag.py  task.py  types.py
src/codevf/resources/: __init__.py  credits.py  projects.py  tags.py  tasks.py
src/codevf/utils/: __init__.py  metadata.py
tests/: test_client.py  test_resources.py  test_structured_output.py  test_tasks_manual.py
