[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codevf-sdk"
version = "0.1.0"
description = "Official Python SDK for the CodeVF API"
readme = "README.md"
authors = [
  { name = "CodeVF", email = "support@codevf.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://codevf.com"
"Repository" = "https://github.com/codevf/codevf-sdk-python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
